RESOLVED FIXED 29650
Crash in WebDownload::willSendRequest when using DefaultDownloadDelegate
https://bugs.webkit.org/show_bug.cgi?id=29650
Summary Crash in WebDownload::willSendRequest when using DefaultDownloadDelegate
Adam Roben (:aroben)
Reported 2009-09-22 12:22:04 PDT
Created attachment 39937 [details] Patch v1 DefaultDownloadDelegate isn't managing refcounts correctly, leading to crashes.
Attachments
Patch v1 (1.08 KB, patch)
2009-09-22 12:22 PDT, Adam Roben (:aroben)
beidson: review+
Adam Roben (:aroben)
Comment 1 2009-09-22 12:22:58 PDT
Adam Roben (:aroben)
Comment 2 2009-09-22 12:29:53 PDT
Note You need to log in before you can comment on or make changes to this bug.