Manage refcounts correctly in DefaultDownloadDelegate::willSendRequest

Fixes <http://webkit.org/b/29650> Crash in
WebDownload::willSendRequest when using DefaultDownloadDelegate

Reviewed by Brady Eidson.

* DefaultDownloadDelegate.cpp:
(DefaultDownloadDelegate::willSendRequest): Call AddRef() on the
object we're returning via the finalRequest out-parameter.

Canonical link: https://commits.webkit.org/40206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48643 268f45cc-cd09-0410-ab3c-d52691b4dbfc